-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.3.0
-
8fb73bb27817a584ad1b7861da9228c6e22bf193
Occurs at least when only build tools are installed.
There appears to be some problem with detection, compilers for auto-detected kits seems to be wrong as can be seen in attached screenshots. When manually setting kit with 2010 compiler, it also cannot compile directly, claiming not to find cl.exe.
Qt Creator does output:
“Failed to retrieve MSVC Environment from “C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd”: ERROR: The system was unable to find the specified registry key or value
Manually setting up PATH before starting qtcreator works though.
- relates to
-
QTCREATORBUG-20829 [REG 4.6.2 > 4.7.0] QtCreator can not set up msvc environment correctly after update
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-18328 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
235159,2 | ProjectExplorer: fix msvc toolchain detection for Windows SDK 7.x | 4.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |