ProjectExplorer: fix msvc toolchain detection for Windows SDK 7.x

Cancel processing the environment diff only if the setenv scripts return
a non zero exit code. Just checking the presence of standard error
output seems to be a to aggressive error checking in this case.

Task-number: QTCREATORBUG-18328
Change-Id: I9243932cd5721cfbfec5a980a2fab6e69f4c31c7
Reviewed-by: Christian Stenger <christian.stenger@qt.io>